boost1.67 (1.67.0-12) UNRELEASED; urgency=medium

  * Add patch to fix FTBFS of package bali-phy on ppc64* (closes: #903665).
  * Ignore file .gitlab-ci.yml when creating the source package.

 -- Giovanni Mascellani <gio@debian.org>  Fri, 30 Nov 2018 19:07:29 +0100

boost1.67 (1.67.0-11) unstable; urgency=medium

  [ Giovanni Mascellani ]
  * Split debian/rules into arch and indep rules, so that arch-independent
    packages are not uselessly built when arch-dependent packages are
    requested and viceversa (closes: #914053).
    + This should also fix some intermittent FTBFS (closes: #913709).
  * Backport patch to fix build on kFreeBSD (closes: #913710).
  * Quit quickly if compilation fails, in order to save on CPU cycles
    and produce easier-to-read build logs.

  [ Dimitri John Ledkov ]
  * Cherrypick predef upstream patch to correctly detect BOOST_OS_LINUX
    using __linux__ define (closes: #914688).

  [ Giovanni Mascellani ]
  * Replace other appearances of __linux with __linux__.

 -- Giovanni Mascellani <gio@debian.org>  Fri, 30 Nov 2018 18:12:49 +0100

boost1.67 (1.67.0-10) unstable; urgency=medium

  [ Giovanni Mascellani ]
  * Rebuild against icu 63.
    + Add shlibs versioning information and breakages so that reverse
      dependencies are rebuilt appropriately.
  * Fail on errors happening inside bash for loops (closes: #912910).

  [ Dimitri John Ledkov ]
  * Add breaks on nheko in unstable.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 13 Nov 2018 12:47:47 +0000

boost1.67 (1.67.0-9) unstable; urgency=medium

  * Drop rtupdate logic for python2, it was never ported to python3 and
    upstream has moved onto co-installable names anyway. Also python2
    default is not going change ever again.
  * Include patch to unbreak mongo testsuite with boost 1.67 program
    options.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 01 Nov 2018 17:19:30 +0000

boost1.67 (1.67.0-8) unstable; urgency=medium

  [ Ondřej Nový ]