@@ -947,6 +947,7 @@ Conflicts: libboost-mpi-python1.40.0,
  libboost-mpi-python1.41.0,
  libboost-mpi-python1.42.0,
  libboost-mpi-python1.46.0, libboost-mpi-python1.46.1, libboost-mpi-python1.48.0, libboost-mpi-python1.49.0, libboost-mpi-python1.50.0, libboost-mpi-python1.52.0, libboost-mpi-python1.53.0, libboost-mpi-python1.54.0, libboost-mpi-python1.55.0, libboost-mpi-python1.57.0, libboost-mpi-python1.58.0, libboost-mpi-python1.60.0, libboost-mpi-python1.61.0, libboost-mpi-python1.62.0, libboost-mpi-python1.63.0, libboost-mpi-python1.65.1
+Provides: ${boost:Provides}
 Description: C++ interface to the Message Passing Interface (MPI), Python Bindings
  This package forms part of the Boost C++ Libraries collection.
  .
@@ -986,6 +987,7 @@ Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Suggests: python, python3
+Provides: ${boost:Provides}
 Description: Boost.Python NumPy extensions
  This package forms part of the Boost C++ Libraries collection.
  .
@@ -1051,6 +1053,7 @@ Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Suggests: python, python3
 Breaks: ${python:Breaks}
+Provides: ${boost:Provides}
 Description: Boost.Python Library
  This package forms part of the Boost C++ Libraries collection.
  .
