@@ -2,6 +2,8 @@ boost1.67 (1.67.0-12) UNRELEASED; urgency=medium
 
   * Add patch to fix FTBFS of package bali-phy on ppc64* (closes: #903665).
   * Ignore file .gitlab-ci.yml when creating the source package.
+  * Expose supported Python version as virtual packages, so that reverse
+    dependencies can depend on the right package.
 
  -- Giovanni Mascellani <gio@debian.org>  Fri, 30 Nov 2018 19:07:29 +0100
 
